# shakey-shoes

./: .gitignore  README.md
android/audio_test/: README.md
android/audio_test/samples/: build.gradle
android/audio_test/samples/MegaDrone/src/main/cpp/: native-lib.cpp
android/audio_test/samples/hello-oboe/: build.gradle
android/audio_test/samples/hello-oboe/src/main/: AndroidManifest.xml
android/audio_test/samples/hello-oboe/src/main/cpp/: AudioConsumer.h  CMakeLists.txt  DataBuffer.cpp  OboeBridge.cpp
android/audio_test/samples/hello-oboe/src/main/res/layout/: activity_main.xml
android/audio_test/samples/shared/: DefaultAudioStreamCallback.h
android/main_app/: README.md  build.gradle  settings.gradle
android/main_app/app/: CMakeLists.txt  CMakeLists_Oboe.txt  build.gradle
android/main_app/app/rcb/: build.gradle
android/main_app/app/rcb/src/main/: AndroidManifest.xml
android/main_app/app/rcb/src/main/java/com/betty7/rcb/: BluetoothConnection.kt  BluetoothDevice.kt  BluetoothProvider.kt  Extensions.kt  MockBluetoothDevice.kt  RcbService.kt
android/main_app/app/rcb/src/main/java/com/slambang/rcb/: BluetoothConnection.kt  BluetoothConnectionState.kt  BluetoothDevice.kt  BluetoothProvider.kt  BluetoothProviderImpl.kt  Extensions.kt  RcbService.kt  RcbServiceConfig.kt  RcbServiceImpl.kt  RcbServiceListener.kt  RcbState.kt
android/main_app/app/src/androidTest/java/com/slambang/shakeyshoes/: ExampleInstrumentedTest.kt
android/main_app/app/src/androidTest/java/com/trainline/myapplication/: ExampleInstrumentedTest.kt
android/main_app/app/src/main/: AndroidManifest.xml
android/main_app/app/src/main/cpp/: AndroidBuffer.h  jni-bridge.cpp
android/main_app/app/src/main/cpp/app/: BufferUtil.h  CMakeLists.txt  DataBuffer.h  DspJniPusher.h  FingerbandDspProducer.h  LatencyTuningCallback.h  OboeBridge.cpp  OboeBridge.h  WavAudioProducer.h  jni_bridge.cpp
android/main_app/app/src/main/cpp/oboe/: CMakeLists.txt
android/main_app/app/src/main/cpp/oboe/parselib/src/main/: AndroidManifest.xml
android/main_app/app/src/main/cpp/oboe/parselib/src/main/cpp/wav/: WavStreamReader.h
android/main_app/app/src/main/java/com/slambang/shakeyshoes/: App.kt
android/main_app/app/src/main/res/drawable/: connection_icon_selector.xml  connection_off.xml  connection_on.xml  cta_text_button_colour.xml  edit_icon_selector.xml  ic_add_button.xml  ic_pencil.xml  ic_pencil_grey.xml  ic_shopping_cart.xml  ic_trash.xml
android/main_app/app/src/main/res/layout/: activity_buffer.xml  activity_fingerband.xml  activity_main.xml  activity_oboe.xml  activity_ping.xml  activity_rapid.xml  activity_shoe.xml  activity_test.xml  circular_buffer_view.xml  circular_buffer_view_page_0.xml  circular_buffer_view_page_1.xml  circular_buffer_view_page_2.xml  config_dialog_view.xml  device_item_view.xml  device_list_view.xml  fragment_rcb.xml  fragment_rcb_device_page_1.xml  fragment_rcb_device_page_2.xml  fragment_rcb_device_page_3.xml  fragment_splash.xml  rcb_item_view.xml
android/main_app/app/src/main/res/menu/: fragment_rcb_menu.xml  rcb_activity_menu.xml
android/main_app/app/src/main/res/navigation/: nav_graph.xml
android/main_app/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
android/main_app/app/src/test/java/com/slambang/shakeyshoes/: ExampleUnitTest.kt
android/main_app/app/src/test/java/com/trainline/myapplication/: ExampleUnitTest.kt
android/main_app/bluetooth_connection/: build.gradle
android/main_app/bluetooth_connection/src/androidTest/java/com/slambang/bluetooth_connection/: ExampleInstrumentedTest.kt
android/main_app/bluetooth_connection/src/main/: AndroidManifest.xml
android/main_app/bluetooth_connection/src/main/java/com/slambang/bluetooth_connection/: BluetoothConnection.kt  BluetoothConnectionImpl.kt  BluetoothConnectionState.kt  BluetoothProvider.kt  BluetoothProviderFactory.kt  BluetoothProviderImpl.kt
android/main_app/bluetooth_connection/src/test/java/com/slambang/bluetooth_connection/: ExampleUnitTest.kt
android/main_app/gradle/wrapper/: gradle-wrapper.properties
android/main_app/rcb/: build.gradle
android/main_app/rcb_service/: build.gradle
android/main_app/rcb_service/src/main/: AndroidManifest.xml
android/main_app/rcb_service/src/main/java/com/slambang/rcb_service/: Extensions.kt  RcbService.kt  RcbServiceConfig.kt  RcbServiceError.kt  RcbServiceErrorMapper.kt  RcbServiceImpl.kt  RcbServiceListener.kt  RcbServiceState.kt  RcbState.kt  RcbStateMapper.kt
arduino/arduino_app/: README.md  arduino_app.ino  arduino_data_stream.h  arduino_platform.h
arduino/hardware/: README.md
arduino/mock_app/: CMakeLists.txt  README.md  catch.h  main.cpp  mockplatform.h  mockstream.h  tests.cpp
common/circular_buffer/: README.md  app.h  appfactory.h  buffer.h  circular_buffer.h  client.h  data_stream.h  platform.h  timer.h
common/libfingerband/: README.md  fingerband_runner.cpp
common/libfingerband/desktop_harness/: CMakeLists.txt
common/libfingerband/libfingerband/libs/Gist/src/: Gist.cpp  Gist.h
common/libfingerband/libfingerband/libs/libsndfile/src/: Android.mk  Application.mk
common/libfingerband/libfingerband/libs/ofxGist/src/: ofxGist.cpp  ofxGist.h
common/libfingerband/libfingerband/src/: BeatProcessor.cpp  BeatProcessor.h  DebugLogger.h  PreProcessor.cpp  PreProcessor.h  WindowResult.h
common/libfingerband/libfingerband/src/decode/: AudioDataSource.h  WavFileDataSource.cpp  WavFileDataSource.h
common/libfingerband/libfingerband/src/dsp/: BeatGenerator.h  BeatGeneratorImpl.cpp  BeatGeneratorImpl.h  DspUtil.cpp  DspUtil.h  Event.h
common/libfingerband/libfingerband/src/write/: AudioFrameWriter.cpp  AudioFrameWriter.h  AverageMagnitudeWriter.cpp  AverageMagnitudeWriter.h  EventWriter.cpp  EventWriter.h  File.h  MagnitudesWriter.cpp  MagnitudesWriter.h  StringWriter.cpp  StringWriter.h
resources/: diagrams_draw.io
test/debug_viewer/: README.md  average_magnitude_reader.py  event_reader.py  main.py  signal_reader.py
test/test_runner/: README.md  poll_android.sh  run_android.sh  run_tests.sh  test_runner.sh
(+174 files in other folders)
